[package]
name = "navdata_components"
version = "0.1.4"
edition = "2021"
authors = ['Lucas.F']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "^1.10.2"
lazy_static = "^1.4.0"
serde = { version = "^1.0.204", features = ["derive"] }

[[test]]
path = "tests/lib.rs"
name = "integration"
